cluster/personal/stirling-pdf/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: stirling-pdf
    app.kubernetes.io/version: 3.0.0
  name: stirling-pdf
spec:
  selector:
    app.kubernetes.io/name: stirling-pdf
  ports:
  - name: http-stirling-pdf
    port: 8080
    targetPort: 8080
